feat: create form component

--- a/web/src/app/components/header/header.component.html
+++ b/web/src/app/components/header/header.component.html
@@ -1,7 +1,14 @@
-<h2>Header</h2>
-<nav>
-    <ul>
-        <li><a routerLink="/">Home</a></li>
-        <li><a routerLink="/about">Sobre</a></li>
-    </ul>
-</nav>
+<header class="header">
+  <div class="container">
+      <a class="brand" routerLink="/">
+        <img src="/assets/image/moments-logo.png" alt="logo" />
+      </a>
+    <nav>
+      <ul class="container-navigations">
+        <li><a routerLink="/" class="link">Home</a></li>
+        <li><a routerLink="/moments/new" class="link">Compartilhar</a></li>
+        <li><a routerLink="/about" class="link">Sobre</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
