--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,5 +1,7 @@
-<app-header></app-header>
-<main class="container">
-   <router-outlet></router-outlet> 
-</main>
-<app-footer></app-footer>
+<div class="global-container">
+   <app-header></app-header>
+   <main class="container-main">
+      <router-outlet></router-outlet>
+   </main>
+   <app-footer></app-footer>
+</div>
