--- a/web/src/app/components/footer/footer.component.html
+++ b/web/src/app/components/footer/footer.component.html
@@ -1,1 +1,7 @@
-<h2>Footer</h2>
+<footer>
+    <div class="container container-footer-content">
+        <div class="circle-footer"></div>
+        <h3>Compartilhe seus melhores momentos!</h3>
+        <p><span>Moments</span> &copy; 2023</p>
+    </div>
+</footer>
