--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -99,6 +99,12 @@ input[type="submit"]:hover {
   color: var(--brand-350);
 }
 
+.validation-error p {
+  color: #dc3545;
+  border-left: .1875rem solid #dc3545;
+  margin-top: .4em;
+  padding-left: .2em;
+}
 
 @media (min-width: 1536px) {
   .container-main {
