feat: create component messages

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="global-container">
+   <app-messages></app-messages>
    <app-header></app-header>
    <main class="container-main">
       <router-outlet></router-outlet>
